packages/tensorkube/tensorkube-0.1.4-py3-none-any.whl/tensorkube/configurations/build_configs/istio_gateway_subdomain_base.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: <gateway-name>
  namespace: <gateway-namespace>
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - <subdomain-name>
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTP  # Note: Set to HTTP since TLS is terminated at ELB
    hosts:
    - <subdomain-name>
